--- a/assets/common.css
+++ b/assets/common.css
@@ -173,14 +173,19 @@ body {
 }
 
 main {
-    margin-top: var(--main-margin-top);
+    width: 100%;
+    margin: var(--main-margin-top) 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0 var(--spacing-md);
+    padding: 0;
     /* Add some horizontal padding */
     overflow-x: hidden;
+
+    @media (max-width: 768px) {
+        margin: var(--main-margin-top-mobile) 0 0;
+    }
 }
 
 p {
@@ -234,10 +239,10 @@ h4 {
 }
 
 article {
-    margin-top: var(--article-margin-top);
-    width: 75vw;
-    max-width: 90%;
-    padding: var(--spacing-lg) var(--spacing-xl);
+    margin: var(--article-margin-top) 0 0;
+    width: 75%;
+    max-width: 95%;
+    padding: var(--spacing-lg);
     background: var(--color-article-bg);
     border-radius: var(--radius-xl);
     box-shadow: var(--shadow-article);
@@ -245,20 +250,20 @@ article {
     transform: translateY(0);
     transition: var(--transition-transform-shadow);
 
+    & > :first-child {
+        margin-top: 0px;
+        @media (max-width: 768px) {
+            margin-top: 6px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        width: 90%;
+        padding: var(--spacing-sm);
+    }
+
     &.animated {
         animation: articleSlideInFromBottom 0.8s var(--transition-timing) both;
-    }
-}
-
-@media (max-width: 768px) {
-    article {
-        width: 90vw;
-        /* article takes more width */
-        padding: var(--spacing-md) var(--spacing-lg);
-    }
-
-    main {
-        margin-top: var(--main-margin-top-mobile);
     }
 }
 
@@ -566,8 +571,6 @@ pre {
 
     @media (max-width: 1200px) {
         width: auto;
-        margin-left: -18px;
-        margin-right: -18px;
     }
 }
 
