--- a/assets/thessa.css
+++ b/assets/thessa.css
@@ -60,7 +60,7 @@ body {
 }
 
 main {
-    margin-top: 5rem;
+    margin: 5rem 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
